# srtb-integration-program

./: .gitignore  Cargo.toml  README.md  index.html  srtb-integration-gui-307adb1e3b541b0e.js  srtb-integration-gui-527aab0781b60b3f.js  srtb-integration-gui-5bdbc4b5b9e00ec6.js  srtb-integration-gui-8d4d8239355d8c5d.js  srtb-integration-gui-ceeadde99a77f546.js  srtb-integration-gui-dc3e996d4659e721.js  srtb-integration-gui-de550ffcd2ada99e.js
.github/workflows/: ci.yml  deploy.yaml  release.yml  rust.yml
src/: cli.rs  lib.rs
srtb-integration/: Cargo.toml
srtb-integration-cli/: Cargo.toml
srtb-integration-cli/src/: main.rs
srtb-integration-gui/: Cargo.toml  index.html
srtb-integration-gui/src/: desktop.rs  main.rs  web.rs
srtb-integration-gui/src/web/: app.rs  file.rs  mod.rs
srtb-integration/src/: chroma.rs  color.rs  lib.rs  speeds.rs  srtb.rs
