[package]
name = "srtb-integration-cli"
description = "A CLI frontend for SRTB integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rfd = { workspace = true }
srtb-integration = { workspace = true }
