[package]
name = "srtb-integration-gui"
description = "A GUI frontend for SRTB integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iced = "0.12.1"
rfd = { workspace = true }
srtb-integration = { workspace = true }
strum = { workspace = true }
