[package]
name = "srtb-integration-gui"
description = "A GUI frontend for SRTB integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iced = "0.12.1"
srtb-integration.workspace = true
strum.workspace = true
log = "0.4.21"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
iced = { version = "0.12.1", features = ["webgl"] }
wasm-bindgen-futures = "0.4.41"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "BlobPropertyBag",
    "Document",
    "Element",
    "File",
    "FileList",
    "FileReader",
    "HtmlAnchorElement",
    "HtmlInputElement",
    "Url",
]
