[package]
name = "srtb-integration"
description = "SRTB integration library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
regex = "1.10.5"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
strum = { workspace = true }
thiserror = "1.0.60"
