[package]
name = "srtb-integration"
description = "SRTB integration library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
regex = "1.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strum = { workspace = true }
thiserror = "2.0.18"
